[package]
name = "jless"
version = "0.1.0"
authors = ["Paul Julius Martinez <pauljuliusmartinez@gmail.com>"]
edition = "2018"
default-run = "jless"

[dependencies]
logos = "0.12.0"
unicode-width = "0.1.5"
unicode-segmentation = "1.7.1"
rustyline = "9.0.0"
regex = "1.5"
lazy_static = "1.4.0"
termion = "*"
signal-hook = "0.3.8"
libc = "0.2"
structopt = "0.3"
isatty = "0.1"
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
