[package]
name = "jless"
version = "0.9.0"
authors = ["Paul Julius Martinez <pauljuliusmartinez@gmail.com>"]
license = "MIT"
description = "A command-line JSON viewer"
keywords = ["cli", "json"]
categories = ["command-line-utilities"]
repository = "https://github.com/PaulJuliusMartinez/jless"
homepage = "https://jless.io"
documentation = "https://jless.io/user-guide.html"
edition = "2018"
rust-version = "1.67"

[dependencies]
logos = "0.12.0"
unicode-width = "0.1.5"
unicode-segmentation = "1.7.1"
rustyline = "9.0.0"
regex = "1.5"
lazy_static = "1.4.0"
termion = "1.5.6"
signal-hook = "0.3.8"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
libc-stdhandle = "0.1.0"
yaml-rust = "0.4"
clipboard = "0.5"

[dev-dependencies]
indoc = "1.0"
